Criei o cabeçalho de localização geográfica.

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
         <main>
             <div class="container">
                 <header>
-                    <div class="col c1">
-                        <div class="coluna-com-titulo-cmam">
+                    <div class="col-de-cmam-emblema-us-distrito-nivel">
+                        <div class="col-de-cmam-modelo-1">
                             <span><b>CMAM-Modelo 01</b></span>
                         </div>
-                        <div class="coluna-com-emblema-e-republica">
-                            <div class="row row1">
+                        <div class="col-de-emblema-us-distrito-nivel">
+                            <div class="row linha-de-emblema-e-republica">
                                 <figure>
                                     <img src="images/emblema.png" alt="emblema da República de Moçambique" />
                                 </figure>
@@ -85,15 +85,15 @@
                                     <span><b>Central de Medicamentos e Artigos Médicos</b></span>
                                 </div>
                             </div>
-                            <div class="row row2">
+                            <div class="row linha-de-us contentor-de-inputs">
                                 <label for="us">Unidade Sanitária:</label>
                                 <input type="text" id="us"/>
                             </div>
-                            <div class="row row3">
+                            <div class="row linha-de-distrito contentor-de-inputs">
                                 <label for="distrito">Distrito:</label>
                                 <input type="text" id="distrito" />
                             </div>
-                            <div class="row row4">
+                            <div class="row linha-de-nivel contentor-de-inputs">
                                 <label for="nivel-do-dc">
                                     Nível&nbsp;de&nbsp;Qualificação&nbsp;do&nbsp;Responsável&nbsp;Clínico:
                                 </label>
@@ -101,64 +101,66 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col c2">
-                        <div class="row row1">
+                    <div class="col-com-h1-provincia-num-de-kits-e-consultas">
+                        <div class="row linha-de-titulo">
                             <h1>Requisição/Balancete N<sup>o</sup></h1>
                             <input type="number" id="numero-de-requisicao"/>
                         </div>
 
-                        <div class="row row2">
-                            <div class="col1">
+                        <div class="row linha-de-provincia">
+                            <div class="col-de-provincia contentor-de-inputs">
                                 <label for="provincia">Província:</label>
                                 <input type="text" id="provincia" />
                             </div>
-                            <div class="col2">
+                            <div class="contentor-de-inputs"></div>
+                            <div class="col-de-periodo contentor-de-inputs">
                                 <label for="periodo">Período:</label>
                                 <input type="text" id="periodo" />
                             </div>
-                            <div class="col3">
+                            <div class="col-de-ate contentor-de-inputs">
                                 <label for="ate">Até:</label>
                                 <input type="text" id="ate" />
                             </div>
                         </div>
-                        <div class="row3">
-                            <div class="col1">
 
-                            </div>
-                            <div class="col2">
+                        <div class="row linha-de-kits recebidos">
+                            <div class="contentor-de-inputs"></div>
+                            <div class="contentor-de-inputs"></div>
+
+                            <div class="contentor-de-inputs">
                                 <label for="numero-de-kits">N<sup>o</sup>de Kits<br/>Recebido:</label>
                                 <input type="number" id="numero-de-kits" />
                             </div>
-                            <div class="col3">
+                            <div class="contentor-de-inputs">
                                 <label for="kit-us">US:</label>
                                 <input type="number" id="kit-us" />
                             </div>
-                            <div class="col4">
-                                <label for="kit-ape">Até:</label>
+                            <div class="contentor-de-inputs">
+                                <label for="kit-ape">APE:</label>
                                 <input type="number" id="kit-ape" />
                             </div>
                         </div>
 
-                        <div class="row4">
-                            <div class="col1">
+                        <div class="row linha-de-kits abertos">
+                            <div class="contentor-de-inputs col-numero-de-consultas">
                                 <label for="numero-de-consultas-externas">N<sup>o</sup>de Consultas Externas Realizadas:</label>
                                 <input type="number" id="numero-de-consultas-externas">
                             </div>
-                            <div class="col2">
+                            <div class="contentor-de-inputs col-kits-abertos">
                                 <label for="numero-de-kits-abertos">N<sup>o</sup>de Kits<br/>Abertos:</label>
                                 <input type="number" id="numero-de-kits-abertos" />
                             </div>
-                            <div class="col3">
+                            <div class="contentor-de-inputs col-kits-us-abertos">
                                 <label for="kits-us-abertos">US:</label>
                                 <input type="number" id="kits-us-abertos" />
                             </div>
-                            <div class="col4">
-                                <label for="kits-ape-abertos">Até:</label>
+                            <div class="contentor-de-inputs col-kits-ape-abertos">
+                                <label for="kits-ape-abertos">APE:</label>
                                 <input type="number" id="kits-ape-abertos" />
                             </div>
                         </div>
                     </div>
-                    <div class="col c3">
+                    <div class="col third-column">
                         <div class="row1">
                             <label for="normal">Normal</label>
                             <input type="checkbox" id="normal"/>
