Terminei de desenvolver o cabeçalho com informações de localização geográfica.

--- a/index.html
+++ b/index.html
@@ -127,15 +127,15 @@
                             <div class="contentor-de-inputs"></div>
                             <div class="contentor-de-inputs"></div>
 
-                            <div class="contentor-de-inputs">
+                            <div class="contentor-de-inputs col-kits-recebidos">
                                 <label for="numero-de-kits">N<sup>o</sup>de Kits<br/>Recebido:</label>
                                 <input type="number" id="numero-de-kits" />
                             </div>
-                            <div class="contentor-de-inputs">
+                            <div class="contentor-de-inputs col-kits-us-recebidos">
                                 <label for="kit-us">US:</label>
                                 <input type="number" id="kit-us" />
                             </div>
-                            <div class="contentor-de-inputs">
+                            <div class="contentor-de-inputs col-kits-ape-recebidos">
                                 <label for="kit-ape">APE:</label>
                                 <input type="number" id="kit-ape" />
                             </div>
