Terminei de desenvolver o cabeçalho do main da ficha.

--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                             <div class="contentor-de-inputs"></div>
                             <div class="col-de-periodo contentor-de-inputs">
                                 <label for="periodo">Período:</label>
-                                <input type="text" id="periodo" />
+                                <input type="date" id="periodo" />
                             </div>
                             <div class="col-de-ate contentor-de-inputs">
                                 <label for="ate">Até:</label>
-                                <input type="text" id="ate" />
+                                <input type="date" id="ate" />
                             </div>
                         </div>
 
@@ -178,7 +178,7 @@
                             <label for="data-de-requisicao">
                                 Data de Requisição:
                             </label>
-                            <input type="text" id="data-de-realizacao" />
+                            <input type="date" id="data-de-realizacao" />
                         </div>
                     </div>
                 </header>
@@ -188,10 +188,10 @@
                             <span>FNM</span>
                         </div>
                         <div class="col-nome-de-farmaco">
-                            <div>
+                            <div class="designacao">
                                 <span>Designação</span>
                             </div>
-                            <div>
+                            <div class="nome-dosagem-forma">
                                 <span>Nome</span>
                                 <span>Dosagem</span>
                                 <span>Forma Farmacêutica</span>
@@ -215,6 +215,7 @@
                                 <span>Total&nbsp;dos<br/>Pedídos</span>
                                 <span>Inventário&nbsp;do<br/>Stock</span>
                                 <span>Diferença</span>
+                                <span>Quantidade&nbsp;a<br/>Requisitar</span>
                        
 
                                 <!-- SIGLAS DOS SUBTITULOS DE CONTROLO -->
@@ -225,12 +226,9 @@
                                 <span>P</span>
                                 <span>I</span>
                                 <span>I&minus;SF</span>
+                                <span></span>
                             </div>
                         </div>
-                        <div class="col-qtd-a-requisitar">
-                            <span>Quantidade&nbsp;a<br/>Requisitar</span>
-                        </div>
-
                         <div class="col-qtd-pedida">
                             <span>Quantidade&nbsp;Pedida</span>
                         </div>
