Terminei de desenvolver a estrutura do main/corpo da ficha.

--- a/index.html
+++ b/index.html
@@ -238,6 +238,303 @@
                         </div>
                     </header>
 
+                    <div class="body">
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+                        <div class="row">
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" readonly />
+                            <input type="text" />
+                            <input type="text" />
+                            <input type="text" />
+                        </div>
+
+                        
+                        
+                    </div>
+
+                    <footer>
+                        <div>
+                            <label for="elaborador">Elaborado por:</label>
+                            <input type="text" id="elaborador" />
+                        </div>
+
+                        <div>
+                            <label for="visto">Visto do Responsável Clínico:</label>
+                            <input type="text" id="visto" />
+                        </div>
+                    </footer>
 
                 </div>
             </div>
